# slur

./: README.md  dune-project  slur.opam
lib/: auc.ml  dune  fBA.ml  linear.atd  logistic_regression.ml  lr_bfgs.ml  lr_bfgs.mli  lr_sgd.ml  lr_sgd.mli  util.ml
src/: client.py
